--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "alembic>=1.16.5",
     "fastapi>=0.118.0",
-    "psycopg>=3.2.10",
+    "psycopg2>=2.9.10",
     "pydantic>=2.11.10",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
