--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.118.0",
     "psycopg2>=2.9.10",
     "pydantic>=2.11.10",
+    "pydantic-settings>=2.11.0",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
 ]
