--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "psycopg2>=2.9.10",
     "pydantic>=2.11.10",
     "pydantic-settings>=2.11.0",
+    "requests>=2.32.5",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
 ]
