--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - app-network # Добавляем сервис в общую сеть
+      - app-network
 
   app:
     build:
@@ -22,7 +22,7 @@ services:
       dockerfile: Dockerfile
     container_name: fastapi_app
     environment:
-      DB_HOST: db # Используем имя сервиса (db) вместо localhost или IP
+      DB_HOST: db
       DB_PORT: 5432
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -32,11 +32,11 @@ services:
     depends_on:
       - db
     networks:
-      - app-network # Добавляем сервис в общую сеть
+      - app-network
 
 volumes:
   postgres_data:
 
 networks:
-  app-network: # Определяем пользовательскую сеть
+  app-network:
     driver: bridge
