--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "aiohttp",
     "alembic>=1.16.5",
     "fastapi>=0.118.0",
     "psycopg2>=2.9.10",
